--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
       dockerfile: ./Dockerfile
       context: ./
     image: h2-alpine
+    restart: always
     volumes:
      - ${SRC_DIRECTORY}/db_expenses.sql:/opt/h2-data/db_expenses.sql
     ports:
