fix anottations for injecting dependencies without constructor using lombok and fixes webclients configs

--- a/src/main/resources/configs/api_currency.properties
+++ b/src/main/resources/configs/api_currency.properties
@@ -1,4 +1,2 @@
-api.base-url=https://v6.exchangerate-api.com
-api.query1=USD
-api.query2=ARS
+api.base-urlCurrency=https://v6.exchangerate-api.com
 api.key=${CURRENCY_API_KEY}
