--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db-expenses:
-    container_name: com.henry.expenseTracker.db-expense-tracker
+    container_name: db-expense-tracker
     build:
       dockerfile: ./Dockerfile
       context: ./
@@ -13,3 +13,10 @@ services:
       - 1521:1521
     environment:
       H2_OPTIONS: -ifNotExists
+  cache:
+    image: redis:6.2-alpine
+    container_name: expense_tracker_cache
+    restart: always
+    ports:
+      - 6379:6379
+    command: redis-server --loglevel warning --requirepass ${REDIS_PASSWORD}
