--- a/src/test/java/resources/configs/client_security.properties
+++ b/src/test/java/resources/configs/client_security.properties
@@ -1,7 +1,6 @@
 app.client.id=client
 app.client.secret=secret
-app.client-scope-client=client
-app.client-scope-employee=employee
-app.client-scope-admin=admin
+app.client-scope-read=read
+app.client-scope-write=write
 app.client-redirect-debugger=https://oauthdebugger.com/debug
 app.client-redirect-spring-doc=https://springone.io/authorized
