--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.henry</groupId>
     <artifactId>expenseTracker</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>expenseTracker</name>
     <description>Demo project for Spring Boot</description>
     <url/>
@@ -45,9 +45,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>2.2.224</version>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -103,15 +103,20 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-oauth2-authorization-server</artifactId>
-<!--            <version>1.0.1</version>-->
-            <version>1.2.3</version>
+            <version>1.0.1</version>
+<!--            <version>1.2.3</version>-->
         </dependency>
         <!--Spring security resource server-->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-oauth2-resource-server</artifactId>
-<!--            <version>6.0.2</version>-->
-            <version>6.1.8</version>
+            <version>6.0.2</version>
+<!--            <version>6.1.8</version>-->
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
         </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
@@ -130,6 +135,17 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <environmentVariables>
+                        <POSTGRES_DB>jdbc:postgresql://localhost:5432/db_expenses</POSTGRES_DB>
+                        <POSTGRES_USER>gusta</POSTGRES_USER>
+                        <POSTGRES_PASSWORD>probando2025</POSTGRES_PASSWORD>
+                    </environmentVariables>
                 </configuration>
             </plugin>
         </plugins>
